--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -2,7 +2,7 @@
 
     html body {
         font-family: '{{ .Site.Params.font }}', sans-serif;
-        background-color: {{ .Site.Params.backgroundColor | default "white" }};
+        background-color: {{ .Site.Params.backgroundColor | default "#151515" }};
     }
 
     :root {
