--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,6 +2,8 @@
 
 <main>
 
+	<div class="bodymovin homebgr" data-icon="animations/contact-bgr.json"></div>
+
     <div class="intro">
 
         <h1>¯\_(ツ)_/¯</h1>
